# trabajo

./: pyproject.toml
examples/: calculadora.py
src/factorial/: operacion.py
