[project]
name = "factorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.11"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "1.7.3"
statistics="3.13.2"

[tool.poetry]
packages = [{include = "factorial", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
